--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.12",
     "nodemon": "^2.0.6",
-    "pg": "^8.4.2"
+    "pg": "^8.4.2",
+    "serve": "^11.3.2"
   }
 }
